# Student_Resident_Assistant

./: CMakeLists.txt  LanguageParser.cpp  LanguageParser.h  README.md  alert.cpp  alert.h  alerter.cpp  alerter.h  calendar.cpp  calendar.h  calendar.ui  calevent.cpp  calevent.h  caleventoption.cpp  caleventoption.h  caleventoption.ui  checklist.cpp  checklist.h  checklist.ui  checklistitem.cpp  checklistitem.h  checklistitemeditor.cpp  checklistitemeditor.h  checklistitemeditor.ui  editeventdialog.cpp  editeventdialog.h  editeventdialog.ui  lockable.cpp  lockable.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.cpp  note.h  noteeditor.cpp  noteeditor.h  noteeditor.ui  notepad.cpp  notepad.h  (+12 more)
